# model-deployer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  a2r_email.html  config.env.example  pyproject.toml
Codes/: Main.py  checkData.py  clinic_fullMonth_pred_Sep_Oct.csv  final_processing.py  loader.py  main.py  monthly_model_eval.py  separate_data.py  treatment_fullMonth_pred_Sep_Oct.csv
Codes/data_prep/: build.py  build_features.py  combine.py  combine_features.py  config.yaml  constants.py  engineer.py  final_processing.py  prep.py  prepData_Symps.py
Codes/data_prep/preprocess/: cancer_registry.py  dart.py  diagnosis.py  emergency.py  lab.py  opis.py
Codes/data_prep/src/: combine.py  feat_eng.py
Codes/data_prep/src/preprocess/: cancer_registry.py  dart.py  emergency.py  lab.py  opis.py  opis2.py
Codes/model_eval/: calc_shap.py  evaluate.py  getModelPredictions.py  get_ED_visit_label.py  get_patients_trt_complete.py  inference.py  save_model_output.py
notebooks/: evaluate.ipynb  power.ipynb
scripts/: build-docker-archive.sh  run-silent-deployment.sh  run-today.sh
src/: loader.py  main.py  monthly_model_eval.py  monthly_model_eval_ED_labels.py
src/dashboard/: component.py  filter.py  generate_dashboard_per_patient.py  risk_dist_plot.py  shap_waterfall.py  style.css
src/data_prep/: build.py  combine.py  config.yaml  constants.py  final_processing.py  imputation_constants.yaml  pipeline.py  prep.py
src/data_prep/preprocess/: chemo.py  diagnosis.py  emergency.py  esas.py  lab.py
src/model_eval/: inference.py  util.py
