[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deployer"
description = "Silent deployment of AIM2REDUCE models under EPIC"
version = "0.2.0"
authors = [
    { name = "Muammar Kabir", email = "Muammar.kabir@uhn.ca" },
    { name = "Kevin He", email = "Kevin.He@uhn.ca" }
]
dependencies = [
    "xgboost==2.0.3",
    "make_clinical_dataset @ git+https://github.com/ml4oncology/make-clinical-dataset.git@v0.1.1",
    "preduce @ git+https://github.com/ml4oncology/preduce.git@v0.1.1",
    "seismometer @ git+https://github.com/epic-open-source/seismometer.git"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "nbqa",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"deployer" = "src"}

[tool.mypy]
ignore_missing_imports = true
pretty = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "I", # isort (import sorting)
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # flake8-naming,
    "A", # flake8-builtins
    "B", # flake8-bugbear,
    # "D", # pydocstyle (docstring conventions)
]
fixable = ["ALL"]
ignore = [
    "E501", # line too long
]
